--- a/README.org
+++ b/README.org
@@ -2,6 +2,20 @@
 
 A brainfuck interpreter implemented in Guile Scheme.
 
+** Brainfuck operators
+
+> Increment the pointer.
+< Decrement the pointer.
++ Increment the byte at the pointer.
+- Decrement the byte at the pointer.
+. Output the byte at the pointer.
+, Input a byte and store it in the byte at the pointer.
+[ Jump forward past the matching ] if the byte at the pointer is zero.
+] Jump backward to the matching [ unless the byte at the pointer is zero.
+
+Note: the looping operators [ and ] have not been implemented yet.
+You can still write brainfuck programs, but it's a bit more annoying.
+
 * License
 
 Expat License.  See COPYING file for license details.
