--- a/README.org
+++ b/README.org
@@ -4,13 +4,13 @@ A brainfuck interpreter implemented in Guile Scheme.
 
 ** Brainfuck operators
 
-> Increment the pointer.
-< Decrement the pointer.
-+ Increment the byte at the pointer.
-- Decrement the byte at the pointer.
-. Output the byte at the pointer.
-, Input a byte and store it in the byte at the pointer.
-[ Jump forward past the matching ] if the byte at the pointer is zero.
+> Increment the pointer.\\
+< Decrement the pointer.\\
++ Increment the byte at the pointer.\\
+- Decrement the byte at the pointer.\\
+. Output the byte at the pointer.\\
+, Input a byte and store it in the byte at the pointer.\\
+[ Jump forward past the matching ] if the byte at the pointer is zero.\\
 ] Jump backward to the matching [ unless the byte at the pointer is zero.
 
 Note: the looping operators [ and ] have not been implemented yet.
